--- a/HelloWorld/Dockerfile
+++ b/HelloWorld/Dockerfile
@@ -1,4 +1,4 @@
-FROM adoptopenjdk/openjdk11:alpine-jre
+FROM docker.io/adoptopenjdk/openjdk11:alpine-jre
 VOLUME /tmp
 COPY target/*.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
